# alibuild

./: .flake8  .gitignore  .pylintrc  .travis.yml  404.html  ANALITICS.md  ANALYTICS.md  DESIGN.md  Jenkinsfile  LICENSE.md  MANIFEST.in  PACKAGING.md  README.md  README.rst  _config.yml  alfaBuild  aliBuild  aliDeps  aliDoctor  aliJenkins  aliModules  alibuild.spec  alienv  alienv.bashrc  alienv.zshrc  bits  bits.cfg  bitsBuild  bitsDeps  bitsDoctor  build-rpm.sh  build_template.sh  codecov.yml  extra.markdown  index.html  index.markdown  mypy.ini  o2-tutorial.html  o2-tutorial.markdown  pb  (+16 more)
.claude/skills/support-architecture/: SKILL.md
.github/workflows/: documentation.yml  pr-check.yml  pythonpackage.yml  release.yml
_layouts/: main.html
_site/: extra.html  index.html  quick.html  reference.html  user.html
alibuild_helpers/: Makeflow.jnj  __init__.py  analytics.py  args.py  build.py  build_template.sh  clean.py  cmd.py  completion.py  deps.py  doctor.py  git.py  init.py  install.py  log.py  main.py  migrate.py  reconstruct.py  scm.py  sl.py  source.py  sync.py  templating_plugin.py  utilities.py  version.py  workarea.py
alibuild_helpers/completions/: bash.sh  zsh.sh
bits_helpers/: Makeflow.jnj  __init__.py  analytics.py  args.py  build.py  build_template.sh  clean.py  cmd.py  deps.py  doctor.py  git.py  init.py  log.py  scm.py  sl.py  sync.py  utilities.py  workarea.py
css/: bootstrap-theme.min.css
debian/: changelog  control  copyright  files  rules
docs/: README.md  SUPPORT  _config.yml  extra.markdown  index.markdown  main.css  mkdocs.yml  o2-daq-tutorial.markdown  o2-dataflow-tutorial.markdown  o2-tutorial.markdown  quick.markdown  reference.markdown  side-menu.css  troubleshooting.markdown  tutorial.markdown  user.markdown
docs/_includes/: section_toc.html
docs/_layouts/: main.html  redirect.html
docs/css/: bootstrap.min.css
docs/docs/: index.md  o2-tutorial.md  quick.md  reference.md  troubleshooting.md  tutorial.md  user.md
docs/docs/stylesheets/: extra.css
extras/nix/: alibuild_nix.jnj  alidist-aliphysics.nix  alidist-helpers.nix  alidist.nix  flake.nix  hyperloop.nix  hyperloopTest.nix  nix-interactive.bash  update-envs.sh
js/: highlight.pack.js
script/: cibuild  custom_htmlproofer.rb
search/: search_index.json
templates/: alibuild_nix.jnj  alibuild_to_please.jnj
tests/: test_analytics.py  test_args.py  test_build.py  test_clean.py  test_cmd.py  test_completion.py  test_coverage.py  test_deps.py  test_doctor.py  test_git.py  test_hashing.py  test_init.py  test_install.py  test_log.py  test_migrate.py  test_packagelist.py  test_parseRecipe.py  test_reconstruct.py  test_source.py  test_sync.py  test_system_replacement.py  test_utilities.py  test_version.py  test_workarea.py
tests/testdist/: broken3.sh  broken4.sh  broken5.sh  broken6.sh  broken7.sh  clobber-initdotsh.sh  defaults-o2.sh  delete-etc.sh  tracking-env.sh
yaml/: README  __init__.py  composer.py  constructor.py  cyaml.py  dumper.py  emitter.py  loader.py  parser.py  reader.py  representer.py  resolver.py  scanner.py  serializer.py
