[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.6"
name = 'bits'
dynamic = ['readme', 'version']
description = 'Build Tool'
keywords = ['HEP', 'ALICE']
license = { file = 'LICENSE' }
authors = [
  {name = 'Giulio Eulisse', email = 'giulio.eulisse@cern.ch'},
  {name = 'Timo Wilken', email = 'timo.wilken@cern.ch'},
  {name = 'Predrag Buncic', email = 'predrag.buncic@cern.ch'},
  {name = 'Sergio Garcia', email = 'sergio.garcia@cern.ch'},
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
]

dependencies = [
  'pyyaml',
  'requests',
  'distro',
  'jinja2',
  'boto3<1.36.0',
]

[project.urls]
homepage = 'https://github.com/bitsorg/bits'

[tool.setuptools]
script-files = ["bits", "bitsBuild", "bitsDoctor", "bitsDeps", "pb"]

[tool.setuptools_scm]
write_to = "bits_helpers/_version.py"

[tool.setuptools.package-data]
bits_helpers = ['build_template.sh']

[tool.setuptools.packages.find]
where = ["."]
exclude = ["yaml"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}
