[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.6"
name = 'alibuild'
dynamic = ['readme', 'version']
description = 'ALICE Build Tool'
keywords = ['HEP', 'ALICE']
license = { file = 'LICENSE' }
authors = [
  {name = 'Giulio Eulisse', email = 'giulio.eulisse@cern.ch'},
  {name = 'Timo Wilken', email = 'timo.wilken@cern.ch'},
  {name = 'Sergio Garcia', email = 'sergio.garcia@cern.ch'},
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
]

dependencies = [
  'pyyaml',
  'requests',
  'distro',
  'jinja2',
  'boto3<1.36.0',
]

[project.scripts]
aliBuild = "alibuild_helpers.main:main"
aliDoctor = "alibuild_helpers.main:doctor_main"
aliDeps = "alibuild_helpers.main:alideps_main"
pb = "alibuild_helpers.main:pb_main"

[project.urls]
homepage = 'https://alisw.github.io/alibuild'


[tool.setuptools]
script-files = ["alienv"]

[tool.setuptools_scm]
write_to = "alibuild_helpers/_version.py"

[tool.setuptools.package-data]
alibuild_helpers = ['build_template.sh']

[tool.setuptools.packages.find]
where = ["."]
exclude = ["yaml"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

